# llmops-platform

./: .dockerignore  .env.example  .env.secrets.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy.yml
helm/llmops-platform/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/llmops-platform/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  karpenter-ec2nodeclass.yaml  karpenter-nodepool.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
infra/live/: terragrunt.hcl
infra/live/_envcommon/: database.hcl  karpenter.hcl  kubernetes.hcl  networking.hcl  redis.hcl  storage.hcl
infra/modules/database/: main.tf
infra/modules/karpenter/: main.tf
infra/modules/kubernetes/: main.tf
infra/modules/networking/: main.tf
infra/modules/redis/: main.tf
infra/modules/secrets/: main.tf
infra/modules/storage/: main.tf
scripts/cloud/: deploy.sh  teardown.sh
scripts/cloud/lib/: 01-state-infra.sh  02-terraform.sh  03-kubeconfig.sh  04-ebs-csi.sh  05-karpenter-helm.sh  06-karpenter-iam-fix.sh  07-docker-build.sh  08-helm-deploy.sh  09-db-migrate.sh  10-langfuse.sh  11-verify.sh
scripts/local/: deploy.sh  teardown.sh
scripts/local/clickhouse/: keeper-config.xml
scripts/shared/: common.sh  config.sh  upload-secrets.sh
src/llmops/: __init__.py  config.py  dependencies.py  logging.py  main.py  metrics.py
tests/: conftest.py
tests/unit/: test_metrics.py
(+93 files in other folders)
